# darkforge-memory-battle

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
config/: contestants.yaml  judge.ablation-claude-answer.yaml  judge.ablation-claude-scorer.yaml  judge.battle.yaml  judge.yaml
results/: 2026-04-19T17-40-07Z__chromadb_baseline__sanity.json  2026-04-19T18-46-42Z__chromadb_baseline__sanity.json  2026-04-19T21-52-07Z__chromadb_baseline__sanity.json  2026-04-19T21-58-21Z__hindsight__sanity.json  2026-04-19T22-02-05Z__hindsight__sanity.json  2026-04-19T22-06-08Z__hindsight__sanity.json  2026-04-19T22-09-26Z__hindsight__sanity.json  2026-04-19T22-12-18Z__chromadb_baseline__sanity.json  2026-04-19T22-14-52Z__chromadb_baseline__sanity.json  2026-04-19T22-23-57Z__chromadb_baseline__track_a_oracle.json  2026-04-19T23-11-55Z__hindsight__track_a_oracle.json  2026-04-20T01-11-41Z__chromadb_baseline__track_a_oracle.json  2026-04-20T01-53-16Z__mem0__track_a_oracle.json  2026-04-20T15-03-46Z__chromadb_baseline__track_a_oracle.json  2026-04-20T15-57-22Z__hindsight__track_a_oracle.json  2026-04-20T16-25-26Z__mem0__track_a_oracle.json  2026-04-20T16-36-24Z__chromadb_baseline__track_a_oracle.json  2026-04-20T17-21-44Z__hindsight__track_a_oracle.json  2026-04-20T19-54-01Z__chromadb_baseline__track_a_oracle.json  2026-04-20T20-48-17Z__hindsight__track_a_oracle.json  2026-04-20T21-14-38Z__mem0__track_a_oracle.json  2026-04-20T21-15-48Z__chromadb_baseline__track_a_oracle.json  2026-04-20T22-02-54Z__hindsight__track_a_oracle.json  2026-04-20T22-30-09Z__mem0__track_a_oracle.json  (+36 more)
(+23 files in other folders)
